--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,24 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+# Compiled class file
+*.class
 
-# Test binary, built with `go test -c`
-*.test
+# Log file
+*.log
 
-# Code coverage profiles and other test artifacts
-*.out
-coverage.*
-*.coverprofile
-profile.cov
+# BlueJ files
+*.ctxt
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
 
-# Go workspace file
-go.work
-go.work.sum
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
 
-# env file
-.env
-
-# Editor/IDE
-# .idea/
-# .vscode/
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+replay_pid*
